--- a/_posts/2021-10-08-inktober.md
+++ b/_posts/2021-10-08-inktober.md
@@ -8,27 +8,30 @@ tags:
   - mandelbrot set
 ---
 
-For Inktober 8th, today's phrase was *Watch* I was reminded by a movie I recently watched called Inception. While sketching a watch from the movie for today I was reminded of beautiful fractals visualizing time and recursion from the movie.
+For Inktober 8th, today's phrase was *Watch* I was reminded by a movie I recently watched called Inception. While sketching a scene from the movie for Inktober I was reminded of the beautiful fractals on display visualizing time and recursion.
 
-Mandelbrot sets are generated from iterating on a set of complex numbers, c, which are bounded in absolute value by the function ![](https://wikimedia.org/api/rest_v1/media/math/render/svg/191627a3eebdd6608c9b226786defc468b747502). These can generate unique fractal patterns and can be infinitely bounded and can create unique geometries.
+Mandelbrot sets are generated from iterating on a set of complex numbers, c, which are bounded in absolute value by the function ![](https://wikimedia.org/api/rest_v1/media/math/render/svg/191627a3eebdd6608c9b226786defc468b747502)
+These can generate unique fractal patterns and can be infinitely bounded and can create unique geometries.
+
 ## Generated Fractals
+
+This is the most basic fractal pattern it shows the edges of fractals and bounds before the complex number becomes unstable.
 
 ![](../assets/images/mandelbrot.jpg)
 **Figure 1**: _Start of a Mandelbrot Set_
 
-This is the most basic fractal pattern it shows the edges of fractals and bounds before the complex number becomes unstable.
+This shows the evolution of boundaries of one pass to a multipass generation. This is a clever way of showing the stability of a system through its passes
 
 ![](../assets/images/mandel.gif)
 **Figure 2**: _Generation of Mandelbrot Set from one pass to multi-pass_
 
-This shows the evolution of boundaries of one pass to a multipass generation. This is a clever way of showing the stability of a system through its passes
 
 ![](../assets/images/mandel_recurs.gif)
 
 **Figure 3**: _Absolute difference in pixels showing difference per pass_
 
 ## Generation of Mandelbrot Sets
-Generating Mandelbrot sets in code is quite trivial to understand. Per pixel you can recursively calculate the subtrees of that pixel up to a maximum depth _(n=1000) is the depth I used_. This can be quite slow because you are calculating similar problems for the same pixel. Tired of waiting for large images to generate I sped this up by throwing parallelization and GPUs at the problem. 
+Generating Mandelbrot sets in code is quite trivial to understand. Per pixel you can recursively calculate the subtrees of that pixel up to a maximum depth _(n=1000) is the depth I used_. This can be quite slow because you are calculating similar problems for the same pixel. Tired of waiting for large images to generate I sped this up by throwing GPUs at the problem. 
 
 ```python
 def mandelbrot(c0, img, max_depth=1000): 
