--- a/_posts/2021-10-08-inktober.md
+++ b/_posts/2021-10-08-inktober.md
@@ -35,6 +35,7 @@ This shows the evolution of boundaries of one pass to a multipass generation. Th
 Generating Mandelbrot sets in code is quite trivial to understand. Per pixel you can recursively calculate the subtrees of that pixel up to a maximum depth _(n=1000) is the depth I used_. This can be quite slow because you are calculating similar problems for the same pixel. Tired of waiting for large images to generate I sped this up by throwing GPUs at the problem. 
 
 ```python
+# ty Alexmano98 for the amazing GPU implementation.  
 def mandelbrot(c0, img, max_depth=1000): 
 
     # Initialize c
@@ -68,3 +69,5 @@ def mandelbrot(c0, img, max_depth=1000):
     return pixels
 ```
 Applying tensors allows us to use a GPU to speed up the calculation. You can seperate out the calculation per pixel parallelizing the problem and creating faster calculations. "Zooming in" is a matter of translating to a boundary and applying a zoom factor.
+
+![Link to Alexman98's Github](https://github.com/Alexmano98)
