--- a/_posts/2021-10-08-inktober.md
+++ b/_posts/2021-10-08-inktober.md
@@ -70,4 +70,4 @@ def mandelbrot(c0, img, max_depth=1000):
 ```
 Applying tensors allows us to use a GPU to speed up the calculation. You can seperate out the calculation per pixel parallelizing the problem and creating faster calculations. "Zooming in" is a matter of translating to a boundary and applying a zoom factor.
 
-![Link to Alexman98's Github](https://github.com/Alexmano98)
+Thank you [Alexmano98](https://github.com/Alexmano98) for the late night GPU implementation.
